# tal-qual

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
.scratch/phase-a-nlp-refinement/: PRD.md
.scratch/portuguese-similes-mvp/: PRD.md
data/: file_names.txt
data/sample/: portuguese-similes-smoke.txt
docker/pyspark/: Dockerfile
docs/: bigdata-presentation-slides.html  index.html  technical-pipeline-slides.html
docs/adr/: 0001-uv-for-local-python-workflow.md
docs/agents/: domain.md
docs/context/: brwac-clean-context.md  mvp-phase-a-checkpoint.md  portuguese-similes-mvp-adaptation-context.md  pudding-project-analysis-context.md
docs/reports/: 2026-05-17-dataset-expansion-experiment-retrospective.md  2026-05-17-full-corpus-output-review.md
docs/specs/: 0001-portuguese-similes-mvp-spec.md  0002-mvp-phase-A-nlp-filter.md  0003-mvp-phase-b-llm-classification.md  0006-como-article-ground-vehicle-mvp.md  0007-dataset-expansion-experiments.md  0008-backend-ready-comparison-dataset.md
notebooks/: 01_como_article_ground_vehicle_mvp.ipynb  01_full_como_article_ground_vehicle_mvp.ipynb  01_hc_como_article_ground_vehicle_mvp.ipynb  01_pyspark_smoke_run.ipynb  02_bronze_text_preparation.ipynb  03-1_one_shard_materialized_validation.ipynb  03_one_shard_end_to_end_validation.ipynb  04_phase_a_validation.ipynb
src/tal_qual/: smoke.py  (+5 more)
tests/: test_bronze.py  test_como_article_ground_vehicle.py  test_gold_outputs.py  test_phase_a_docs.py  test_phase_a_notebook.py  test_refinement.py  test_silver.py  test_smoke_module.py
(+27 files in other folders)
