[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tal-qual"
version = "0.1.0"
description = "Spark/PySpark MVP for extracting Portuguese comparison candidates."
requires-python = ">=3.11"
dependencies = [
    "pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl",
    "spacy>=3.7,<4",
]

[tool.setuptools.packages.find]
where = ["src"]
